<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtVEcommerce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="5dp"
            android:text="@string/ecommerce"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtVRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="@id/txtVEcommerce"
            app:layout_constraintStart_toStartOf="@id/txtVEcommerce"
            app:layout_constraintEnd_toEndOf="@id/txtVEcommerce"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtVQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/txtVRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/txtVRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/txtVRightAddressForShopping"
            android:text="@string/quality"
            android:textAlignment="center"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aBtnRegister"
            android:layout_width="200dp"
            android:layout_height="55dp"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/txtVQuality"
            app:layout_constraintStart_toStartOf="@id/txtVQuality"
            app:layout_constraintEnd_toEndOf="@id/txtVQuality"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aBtnLogin"
            android:layout_width="200dp"
            android:layout_height="55dp"
            style="@style/whiteButtonStyle"
            app:layout_constraintEnd_toEndOf="@id/txtVQuality"
            app:layout_constraintStart_toStartOf="@id/txtVQuality"
            app:layout_constraintTop_toBottomOf="@id/aBtnRegister"
            android:layout_marginTop="10dp"
            android:text="@string/login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</FrameLayout>