<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtVResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtVResetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/email_password_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVResetPassword"
        android:textSize="13sp"/>

    <EditText
        android:id="@+id/etEmailResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txtVResetPasswordText"
        app:layout_constraintEnd_toEndOf="@+id/txtVResetPasswordText"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtVResetPasswordText"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/etEmailResetPassword"
        app:layout_constraintEnd_toEndOf="@id/etEmailResetPassword"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmailResetPassword"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelResetPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:background="@drawable/white_background"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/blue_background"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>