<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glLeftTexture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:3"/>

    <ImageView
        android:id="@+id/imgVEllipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ellips"
        app:layout_constraintStart_toStartOf="@id/glEllipseLeft"
        app:layout_constraintEnd_toEndOf="@id/glEllipseRight"
        app:layout_constraintTop_toTopOf="@id/glEllipseTop"
        app:layout_constraintBottom_toBottomOf="@id/glEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/txtVRightAddressForShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="115dp"
        app:layout_constraintTop_toTopOf="@id/glLeftTexture"
        app:layout_constraintStart_toStartOf="@id/imgVEllipse"
        app:layout_constraintEnd_toEndOf="@id/imgVEllipse"
        app:layout_constraintBottom_toBottomOf="@id/imgVEllipse"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtVQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/txtVRightAddressForShopping"
        app:layout_constraintEnd_toEndOf="@id/txtVRightAddressForShopping"
        app:layout_constraintTop_toBottomOf="@id/txtVRightAddressForShopping"
        android:text="@string/quality"
        android:textAlignment="center"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glLeftTexture"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aBtnStart"
        android:layout_width="130dp"
        android:layout_height="55dp"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/txtVQuality"
        app:layout_constraintStart_toStartOf="@id/txtVQuality"
        app:layout_constraintEnd_toEndOf="@id/txtVQuality"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

</androidx.constraintlayout.widget.ConstraintLayout>